# fcitx5-vi-escape

./: CMakeLists.txt  LICENSE  README.md  vi-escape.conf.in
src/: CMakeLists.txt  vi_escape.cpp
